[package]
name = "tensormq-broker"
version = "0.1.0"
edition = "2024"
description = "A zero-copy, high-performance tensor message broker."
license = "MIT"
repository = "https://github.com/VKArsenal/tensormq-broker"
keywords = ["messaging", "machine-learning", "tcp", "broker"]
categories = ["network-programming"]

[dependencies]
bytes = "1.11.1"
dashmap = "6.1.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
